tests/algorithms/x/Clojure/graphs/lanczos_eigenvectors.error
run: exit status 1
Syntax error compiling var at (/workspace/mochi/tests/algorithms/x/Clojure/graphs/lanczos_eigenvectors.clj:251:188).
Unable to resolve var: find_lanczos_eigenvectors_graph in this context

Full report at:
/tmp/clojure-17371458152693353418.edn
